# next-tauri-python-demo

./: .gitignore  .prettierignore  Cargo.toml  README.md  dependabot.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  turbo.json
.github/workflows/: build-and-release.yml
.husky/: pre-commit
service/: .gitignore  package.json  pyproject.toml  runner.py  setup.py
service/app/: __init__.py  log_conf.py  main.py
ui/: .npmrc  package.json  prebuild.js
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: main.rs
ui/src/app/: layout.tsx  page.tsx
ui/src/components/: Footer.tsx  Service.tsx
ui/src/components/ui/: button.tsx  input.tsx
ui/src/hooks/: useService.ts
ui/src/styles/: fonts.ts
